fiscal-finance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiscal-finance-service
spec:
  type: NodePort
  selector:
    app: fiscal-finance
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31060
