fiscal-finance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiscal-finance-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.fiscal-finance.40.82.176.176.nip.io
        - api.fiscal-finance.40.82.176.176.nip.io
      secretName: fiscal-finance-tls-secret
  rules:
    - host: app.fiscal-finance.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiscal-finance-frontend-svc
                port:
                  number: 80
    - host: api.fiscal-finance.40.82.176.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiscal-finance-backend-svc
                port:
                  number: 5000
